Update and rename 2SigmaP1.ipynb to 2020-12-08_2SigmaP1.ipynb

--- a/_notebooks/2020-12-08_2SigmaP1.ipynb
+++ b/_notebooks/2020-12-08_2SigmaP1.ipynb
@@ -18,7 +18,7 @@
         "id": "hAuVckvsmOJz"
       },
       "source": [
-        "# tipToe Dive into Machine Learning \n",
+        "# 1. tipToe Dive into Machine Learning \n",
         "> implementing various methods and tools particularly notes from [The Mechanics of Machine Learning](https://mlbook.explained.ai/) by [Terrence Par](https://parrt.cs.usfca.edu/) and [Jeremy Howard](https://www.fast.ai/about/#jeremy).\n",
         "- toc: true\n",
         "- branch: master\n",
