restructuring table of content

--- a/_notebooks/2020-12-08-2SigmaP1.ipynb
+++ b/_notebooks/2020-12-08-2SigmaP1.ipynb
@@ -502,8 +502,8 @@
    "source": [
     "# Model Training \n",
     "are there patterns that show a relationship between the features and the target? \n",
-    "## procedure:\n",
-    "- create design matrices: features (independent variables) vs target (dependent variable)"
+    "## procedure\n",
+    "### create design matrices: features (independent variables) vs target (dependent variable)"
    ]
   },
   {
@@ -524,7 +524,7 @@
     "id": "wZMrHGJrPNku"
    },
    "source": [
-    "- create model"
+    "### create model"
    ]
   },
   {
@@ -546,7 +546,7 @@
     "id": "ookC54uTTMR0"
    },
    "source": [
-    "- fit model to training data"
+    "### fit model to training data"
    ]
   },
   {
