--- a/_notebooks/2020-12-08-2SigmaP1.ipynb
+++ b/_notebooks/2020-12-08-2SigmaP1.ipynb
@@ -347,8 +347,8 @@
     "id": "2OFnBjLe_6qC"
    },
    "source": [
-    "`df.info` shows the data has a mix of numeric values `float64` `int64` and non-numeric values `object` \\\n",
-    "our focus will be on numeric data"
+    "`df.info` shows the data has a mix of numeric values `float64` `int64` and non-numeric values `object`\\\n",
+    "our focus will be on numeric data."
    ]
   },
   {
