--- a/_notebooks/2020-12-08-2SigmaP1.ipynb
+++ b/_notebooks/2020-12-08-2SigmaP1.ipynb
@@ -347,8 +347,7 @@
     "id": "2OFnBjLe_6qC"
    },
    "source": [
-    "`df.info` shows the data has a mix of numeric values `float64` `int64` and non-numeric values `object`\\\n",
-    "our focus will be on numeric data."
+    "`df.info` shows the data has a mix of numeric values `float64` `int64` and non-numeric values `object`. our focus will be on numeric data."
    ]
   },
   {
@@ -672,6 +671,7 @@
     "id": "SoPOQVWrvey8"
    },
    "source": [
+    "# Model Testing (Generalization)\n",
     "## how well does the model perform on unseen data (generalization)?\n",
     "does the model yield reasonable predictions?\\\n",
     "checking for validation error using:\n",
