--- a/_notebooks/2020-12-08-2SigmaP1.ipynb
+++ b/_notebooks/2020-12-08-2SigmaP1.ipynb
@@ -673,8 +673,7 @@
    "source": [
     "# Model Testing (Generalization)\n",
     "## how well does the model perform on unseen data (generalization)?\n",
-    "does the model yield reasonable predictions?\\\n",
-    "checking for validation error using:\n",
+    "does the model yield reasonable predictions? checking for validation error using:\n",
     "- hold out method\n",
     "- out-of-bag score"
    ]
