updated nb2 and geenerated new files in _nb folder

--- a/_notebooks/2020-12-09-2SigmaP2.ipynb
+++ b/_notebooks/2020-12-09-2SigmaP2.ipynb
@@ -15,11 +15,40 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "## Loading data\n",
+    "download and unzip these files into your working directory before running the following command `!python prep-rent.py`:\n",
+    "- [train.json](https://www.kaggle.com/c/two-sigma-connect-rental-listing-inquiries/data?select=train.json.zip)\n",
+    "- [prep-rent.py](https://mlbook.explained.ai/data/prep-rent.py)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Created rent.csv\n",
+      "Created rent-ideal.csv\n"
+     ]
+    }
+   ],
+   "source": [
+    "!python ../data/prep-rent.py"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# First, some exploratory data analysis (EDA)\n",
+    "generating some descriptive statistics. that is, a summary of the central tendency, measures of dispersion and shape of rental dataset's distribution. all of which is possible when the data contains no missing "
+   ]
   }
  ],
  "metadata": {
