updated prep-rent.py to include data directory

--- a/_notebooks/2020-12-09-2SigmaP2.ipynb
+++ b/_notebooks/2020-12-09-2SigmaP2.ipynb
@@ -47,7 +47,7 @@
    "metadata": {},
    "source": [
     "# First, some exploratory data analysis (EDA)\n",
-    "generating some descriptive statistics. that is, a summary of the central tendency, measures of dispersion and shape of rental dataset's distribution. all of which is possible when the data contains no missing "
+    "generating some descriptive statistics. that is, a summary of the central tendency, measures of dispersion and shape of rental dataset's distribution. all of which is possible when the data contains no missing values `NaN` "
    ]
   }
  ],
