run modified prep-rent.py file

--- a/_notebooks/2020-12-09-2SigmaP2.ipynb
+++ b/_notebooks/2020-12-09-2SigmaP2.ipynb
@@ -26,15 +26,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Can't find train.json file; must execute this program in same dir\n",
-      "To get train.json, go to https://www.kaggle.com/c/two-sigma-connect-rental-listing-inquiries/data\n"
+      "Created rent.csv\n",
+      "Created rent-ideal.csv\n"
      ]
     }
    ],
